Fixed grid or list button alignment in Doctors and Patients Page and fixed the default images in live

--- a/pages/all-medicines/all-medicines.css
+++ b/pages/all-medicines/all-medicines.css
@@ -1,5 +1,8 @@
+/* All Medicines - Doctor's Account*/
 .medicines-content {
     display: flex;
+    width: 100%;
+    justify-content: space-between
 }
 
 .pharmacy-list-section{
